[global]
setup_hook =
    cardhu.hooks.setup_hook

[metadata]
name = Cardhu
version = 0.0.1
requires-dist = setuptools
keywords = setuptools, pip, distutil2
author = Xavier Barbosa
author-email = clint.northwood@gmail.com
home-page = https://github.com/johnnoone/cardhu

[entry_points]
distutils.setup_keywords =
  cardhu = cardhu.core:cardhu
